# dotfiles

./: .gitignore  README.md  aur.sh  configuration.nix  flake.nix  install.sh  lib.nix  setup.sh  yconfig.nix  zshenv  zshrc
config/: .gitignore  config  mimeapps.list
config/X11/: Xinitrc  sxrc
config/Xres/: dmenu.xres  main.xres
config/Xresources/: dmenu  main  st  xprompt
config/alacritty/: alacritty.toml  alacritty.yml
config/bash/: bashrc
config/bspwm/: bspwmrc  external_rules  yset.nix
config/dunst/: dunstrc
config/enigma/: enigmaswingrc  enigmauirc
config/fontconfig/: conf.d
config/gtk-2.0/: gtkfilechooser.ini
config/gtk-3.0/: settings.ini
config/helix/: config.toml  languages.toml
config/htop/: htoprc
config/kak/: kakrc  yset.nix
config/kak-lsp/: kak-lsp.toml
config/keynav/: keynavrc
config/lazygit/: state.yml
config/lemonbar/: .gitignore  Cargo.toml  Tupfile  asyncmodules.cpp  asyncmodules.h  default.nix  flake.nix  helpers.cpp  main.cpp  misc.cpp  misc.h  moduledefs.cpp  modules.cpp  modules.h  network.cpp  network.h  redraw.cpp  redraw.h  x.cpp  yset.nix
config/lemonbar-rust/: Cargo.toml
config/lemonbar/src/: Makefile  asyncmodules.cpp  helpers.cpp  helpers.h  main.cpp  main.rs  misc.cpp  network.cpp  x.h
config/lemonbar/tests/: main.rs
config/menus/: applications.menu
config/newsboat/: config  (+1 more)
modules/: bspwm.nix  core.nix  extras.nix  kakoune.nix  lemonbar.nix  misc.nix  scripts.nix
scripts/: builder.sh  scripts  yset.nix
ysets/: bspwm.nix  core.nix  kakoune.nix  lemonbar.nix  misc.nix  scripts.nix  user.nix
(+88 files in other folders)
