[package]
name = "controllemonbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.4"
chrono = "0.4.22"
memmap = "0.7.0"
x11rb = "0.10.1"

[profile.release]
strip = true
lto = true
